--- a/pom.xml
+++ b/pom.xml
@@ -245,6 +245,11 @@
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-surefire-plugin</artifactId>
                 <version>2.19.1</version> <!-- Newer version do not yet work with Java 11 -->
+                <configuration>
+                    <argLine>
+                        ${argLine}
+                    </argLine>
+                </configuration>
             </plugin>
 
             <plugin>
