--- a/pom.xml
+++ b/pom.xml
@@ -206,6 +206,16 @@
                             </execution>
                         </executions>
                     </plugin>
+                    <plugin>
+                        <groupId>org.apache.maven.plugins</groupId>
+                        <artifactId>maven-surefire-plugin</artifactId>
+                        <version>2.19.1</version> <!-- Newer version do not yet work with Java 11 -->
+                        <configuration>
+                            <argLine>
+                                ${argLine}
+                            </argLine>
+                        </configuration>
+                    </plugin>
                 </plugins>
             </build>
         </profile>
@@ -245,10 +255,6 @@
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-surefire-plugin</artifactId>
                 <version>2.19.1</version> <!-- Newer version do not yet work with Java 11 -->
-                <configuration>
-                    <argLine>
-                    </argLine>
-                </configuration>
             </plugin>
 
             <plugin>
