--- a/pom.xml
+++ b/pom.xml
@@ -203,12 +203,12 @@
                     <plugin>
                         <groupId>org.sonarsource.scanner.maven</groupId>
                         <artifactId>sonar-maven-plugin</artifactId>
-                        <version>3.6.1.1688</version>
+                        <version>3.7.0.1746</version>
                     </plugin>
                     <plugin>
                         <groupId>org.jacoco</groupId>
                         <artifactId>jacoco-maven-plugin</artifactId>
-                        <version>0.8.4</version>
+                        <version>0.8.5</version>
                         <executions>
                             <execution>
                                 <id>prepare-agent</id>
@@ -227,10 +227,12 @@
                     <plugin>
                         <groupId>org.apache.maven.plugins</groupId>
                         <artifactId>maven-surefire-plugin</artifactId>
-                        <version>2.19.1</version> <!-- Newer version do not yet work with Java 11 -->
+                        <version>3.0.0-M4</version>
                         <configuration>
                             <argLine>
                                 ${argLine}
+                                --illegal-access=deny
+                                -Xmx1500m
                             </argLine>
                         </configuration>
                     </plugin>
