--- a/pom.xml
+++ b/pom.xml
@@ -73,6 +73,18 @@
         </dependency>
 
         <dependency>
+            <groupId>no.ssb.dapla.secrets</groupId>
+            <artifactId>dapla-secrets-client-api</artifactId>
+            <version>0.1.0</version>
+        </dependency>
+
+        <dependency>
+            <groupId>no.ssb.dapla.secrets</groupId>
+            <artifactId>dapla-secrets-provider-dynamic-configuration</artifactId>
+            <version>0.2.0</version>
+        </dependency>
+
+        <dependency>
             <groupId>ch.qos.logback</groupId>
             <artifactId>logback-core</artifactId>
             <version>${logback.version}</version>
