--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
 
     <groupId>io.descoped.dc</groupId>
     <artifactId>data-collector-connector-content-stream-rawdata</artifactId>
-    <version>2.0.0-SNAPSHOT</version>
+    <version>2.0.0</version>
     <packaging>jar</packaging>
 
     <name>Data Collector Connector Content Stream Rawdata</name>
@@ -47,7 +47,7 @@
         <developerConnection>scm:git:git@github.com:descoped/data-collector-connector-content-stream-rawdata.git
         </developerConnection>
         <url>https://github.com/descoped/data-collector-connector-content-stream-rawdata/tree/master</url>
-        <tag>HEAD</tag>
+        <tag>2.0.0</tag>
     </scm>
 
     <distributionManagement>
@@ -232,7 +232,7 @@
                 <sonar.organization>descoped</sonar.organization>
                 <sonar.projectKey>descoped_${project.artifactId}</sonar.projectKey>
                 <sonar.moduleKey>${project.groupId}:${project.artifactId}</sonar.moduleKey>
-                <sonar.coverage.exclusions/>
+                <sonar.coverage.exclusions />
                 <sonar.coverage.jacoco.xmlReportPaths>
                     target/site/jacoco/jacoco.xml
                 </sonar.coverage.jacoco.xmlReportPaths>
