--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
 
     <groupId>io.descoped.dc</groupId>
     <artifactId>data-collector-connector-content-stream-rawdata</artifactId>
-    <version>2.0.1-SNAPSHOT</version>
+    <version>2.0.1</version>
     <packaging>jar</packaging>
 
     <name>Data Collector Connector Content Stream Rawdata</name>
@@ -47,7 +47,7 @@
         <developerConnection>scm:git:git@github.com:descoped/data-collector-connector-content-stream-rawdata.git
         </developerConnection>
         <url>https://github.com/descoped/data-collector-connector-content-stream-rawdata/tree/master</url>
-        <tag>HEAD</tag>
+        <tag>2.0.1</tag>
     </scm>
 
     <distributionManagement>
